--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>ROOT</finalName>
+		<finalName>payout</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
